<resources>
    <string name="app_name">List</string>
    <string name="average_grade">Average grade</string>
    <string name="initials">Initials</string>
    <string name="grades">Grades</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="enter_grade1">Enter grade 1</string>
    <string name="enter_grade2">Enter grade 2</string>
    <string name="enter_grade3">Enter grade 3</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_name">Enter name</string>
    <string name="grade_incorrect">Grade incorrect</string>
    <string name="blank_input">Enter data</string>
    <string name="enable_filter">Filter</string>
    <string name="disable_filter">Turn off filter</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="data_saved">Data saved</string>
    <string name="data_loaded">Data loaded</string>
    <string name="choose_file">Choose file</string>
</resources>